[tool.poetry]
name = "PyGameEngine"
version = "0.1.0"
description = ""
authors = ["mando222 <evemsmando@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pygame = "^1.9"
configReader = "^0.0.6"
numpy = "^1.16"
uuid = "^1.30"
pathlib2 = "^2.3"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
